--- a/index.html
+++ b/index.html
@@ -81,20 +81,26 @@
     </nav>
   </header>
   <section class="intro">
-
+        <div class="intro__container">
+          <h1 class="intro__title">A modern publishing platform</h1>
+          <p class="intro__subtitle">Grow your audience and build your online brand</p>
+          <div class="intro__button-wrapper">
+            <a class="button button--bg-light button--text-red button--bdr-light" href="http://">Start for Free</a>
+            <a class="button button--text-light button--bdr-light" href="http://">Learn More</a>
+          </div>
+        </div>
+        <div class="intro__square-1">
+        </div>
+        <div class="intro__square-2">
+        </div>
+        <div class="intro__circle"></div>
   </section>
+  <main>
+    
+  </main>
 
 
   <!-- 
-  Login
-  Sign Up
-
-  A modern publishing platform
-  Grow your audience and build your online brand
-
-  Start for Free
-  Learn More
-
   Designed for the future
 
   Introducing an extensible editor
