Mobile HTML CSS Footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="prim-nav__mob-navbar">
         <div class="prim-nav__logo-container">
-          <img class="prim-nav__logo" src="/public/images/logo.svg" alt="logo">
+          <img class="prim-nav__logo" src="/images/logo.svg" alt="logo">
         </div>
         <div class="prim-nav__nav-toggle" id="nav-toggle">
           <i class="ri-menu-line nav__burger"></i>
@@ -96,61 +96,119 @@
         <div class="intro__circle"></div>
   </section>
   <main>
-    
-  </main>
+    <section class="design">
+      <div class="design__container">
+        <h2 class="design__heading">Designed for the future</h2>
+        <div class="design__content-container">
+          <div class="design__image-wrapper">
+        <img class="design__image" src="/images/illustration-editor-mobile.svg" alt="editor">
+          </div>
+          <div class="design__text-wrapper">
+            <div class="design__card">
+              <h3 class="design__card-title">Introducing an extensible editor</h3>
+              <p class="design__card-text">
+                Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+                The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+                videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+                change the looks of a blog.
+              </p>
+            </div>
+            <div class="design__card">
+              <h3 class="design__card-title">Robust content management</h3>
+              <p class="design__card-text">
+                Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+                by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+              </p>
+            </div>
+          </div>
+        </div>
+        </div>
+    </section>
 
-
-  <!-- 
-  Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+    <section class="infra">
+      <div class="infra__container">
+        <div class="infra__image-wrapper">
+          <img class="infra__image" src="/images/illustration-phones.svg" alt="phones">
+        </div>
+        <div class="infra__text-wrapper">
+          <h3 class="infra__heading">State of the Art Infrastructure</h3>
+          <p class="infra__text">
+            With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
   This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn -->
-
-  <div class="attribution">
+          </p>
+          <img class="infra__text-image-circle" src="/images/bg-pattern-circles-1.svg" alt="">
+        </div>
+      </div>
+    </section>
+    <section class="laptop">
+      <div class="laptop__container">
+        <div class="laptop__content-container">
+          <div class="laptop__image-wrapper">
+        <img class="laptop__image" src="/images/illustration-laptop-mobile.svg" alt="laptop">
+          </div>
+          <div class="laptop__text-wrapper">
+            <div class="laptop__card">
+              <h3 class="laptop__card-title">Free, open, simple</h3>
+              <p class="laptop__card-text">  
+                Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+              </p>
+            </div>
+            <div class="laptop__card">
+              <h3 class="laptop__card-title">Powerful tooling</h3>
+              <p class="laptop__card-text">
+                Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.
+              </p>
+            </div>
+          </div>
+        </div>
+        </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer__container">
+      <div class="footer_column">
+        <img src="./public/images/logo.svg" alt="logo" class="footer_logo">
+      </div>
+      <div class="footer_column">
+        <nav>
+          <ul class="footer__nav-list">
+            <li><h4 class="footer__nav-title">Product</h4></li>
+            <li><a class="footer__link" href="">Overview</a></li>
+            <li><a class="footer__link" href="">Pricing</a></li>
+            <li><a class="footer__link" href="">Marketplace</a></li>
+            <li><a class="footer__link" href="">Features</a></li>
+            <li><a class="footer__link" href="">Integrations</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer_column">
+        <nav>
+          <ul class="footer__nav-list">
+            <li><h4 class="footer__nav-title">Company</h4></li>
+            <li><a class="footer__link" href="">About</a></li>
+            <li><a class="footer__link" href="">Team</a></li>
+            <li><a class="footer__link" href="">Blog</a></li>
+            <li><a class="footer__link" href="">Careers</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer_column">
+        <nav>
+          <ul class="footer__nav-list">
+            <li><h4 class="footer__nav-title">Connect</h4></li>
+            <li><a class="footer__link" href="">Contact</a></li>
+            <li><a class="footer__link" href="">Newsletter</a></li>
+            <li><a class="footer__link" href="">LinkedIn</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+    </div>
+  </footer>
+  
   <script src="./main.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
