remove dist folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.min.css">
   <title>Frontend Mentor | [Blogr]</title>
-
+  <script src="./main.js" defer></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -209,7 +209,7 @@
     </div>
   </footer>
   
-  <script src="./main.js"></script>
+  
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
