Move Media Queries

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.min.css">
-  <title>Frontend Mentor | [Blogr]</title>
+  <link rel="stylesheet" href="./style.css">
   <script src="./main.js" defer></script>
+  <title>Frontend Mentor | [Blogr]</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -20,7 +21,7 @@
   <header class="prim-nav">
     <nav class="prim-nav__nav">
         <div class="prim-nav__logo-container">
-          <img class="prim-nav__logo" src="/images/logo.svg" alt="logo">
+          <img class="prim-nav__logo" src="./images/logo.svg" alt="logo">
         </div>
         
         <div class="prim-nav__nav-toggle" id="nav-toggle">
@@ -74,7 +75,7 @@
         </ul>  
         <hr>
           <div class="prim-nav__button-container">
-            <a class="button login__button" href="">Login</a>
+            <a class="button login__button login__button" href="">Login</a>
             <a class="button button--gradient button--text-light signup__button" href="">Sign Up</a>
           </div>    
       </div>
@@ -92,7 +93,7 @@
             <a class="button button--text-light button--bdr-light intro__lm-button" href="http://">Learn More</a>
           </div>
         </div>
-          <img class="intro__bg-image" src="/images/bg-pattern-intro-desktop.svg" alt="Intro" />
+          <img class="intro__bg-image" src="./images/bg-pattern-intro-desktop.svg" alt="Intro" />
   </section>
   <main>
     <section class="design">
@@ -100,7 +101,7 @@
         <h2 class="design__heading">Designed for the future</h2>
         <div class="design__content-container">
           <div class="design__image-wrapper">
-        <img class="design__image" src="/images/illustration-editor-desktop.svg" alt="editor">
+        <img class="design__image" src="./images/illustration-editor-desktop.svg" alt="editor">
           </div>
           <div class="design__text-wrapper">
             <div class="design__card">
@@ -126,7 +127,7 @@
     <section class="infra">
       <div class="infra__container">
         <div class="infra__image-wrapper">
-          <img class="infra__image" src="/images/illustration-phones.svg" alt="phones">
+          <img class="infra__image" src="./images/illustration-phones.svg" alt="phones">
         </div>
         <div class="infra__text-wrapper">
           <h3 class="infra__heading">State of the Art Infrastructure</h3>
@@ -134,7 +135,7 @@
             With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
   This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
           </p>
-          <img class="infra__text-image-circle" src="/images/bg-pattern-circles-1.svg" alt="">
+          <img class="infra__text-image-circle" src="./images/bg-pattern-circles-1.svg" alt="">
         </div>
       </div>
     </section>
@@ -143,8 +144,8 @@
       <div class="laptop__container">
         <div class="laptop__content-container">
           <div class="laptop__image-wrapper">
-        <img class="laptop__image-mobile" src="/images/illustration-laptop-mobile.svg" alt="laptop">
-        <img class="laptop__image-desktop" src="/images/illustration-laptop-desktop.svg" alt="laptop">
+        <img class="laptop__image-mobile" src="./images/illustration-laptop-mobile.svg" alt="laptop">
+        <img class="laptop__image-desktop" src="./images/illustration-laptop-desktop.svg" alt="laptop">
           </div>
           <div class="laptop__text-wrapper">
             <div class="laptop__card">
@@ -167,7 +168,7 @@
   <footer class="footer">
     <div class="footer__container">
       <div class="footer_column">
-        <img src="/images/logo.svg" alt="logo" class="footer_logo">
+        <img src="./images/logo.svg" alt="logo" class="footer_logo">
       </div>
       <div class="footer_column">
         <nav>
